--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,11 @@
 pluginManagement {
+    plugins {
+        if (enableModernJavaSyntax.toBoolean()) {
+            id 'com.diffplug.spotless' version '6.23.3'
+        } else {
+            id 'com.diffplug.spotless' version '6.13.0'
+        }
+    }
     repositories {
         maven {
             // RetroFuturaGradle
