Update more Dependencies, allow for running with newer kotlin versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,11 @@ additionalJavaArguments =
 # Using this requires that you use a Java 17 JDK for development.
 enableModernJavaSyntax = true
 
+# Bundles newer Kotlin versions for use with your mod
+# This requires newer language provider mods, such as Forgelin-Continuous
+# See https://github.com/ChAoSUnItY/Forgelin-Continuous
+useNewerKotlinVersion = false
+
 # Enables runClient/runServer tasks for Java 17 and Java 21 using LWJGL3ify.
 # This is primarily used to test if your mod is compatible with platforms running
 # Minecraft 1.12.2 on modern versions of Java and LWJGL, and assist in fixing any problems with it.
