--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,9 @@ plugins {
     //id 'com.diffplug.spotless' version '6.13.0' apply false
     id 'com.palantir.git-version' version '3.1.0' apply false
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
-    id 'org.jetbrains.kotlin.kapt' version '1.8.0' apply false
-    id 'com.google.devtools.ksp' version '1.8.0-1.0.9' apply false
+    //id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    //id 'org.jetbrains.kotlin.kapt' version '1.8.0' apply false
+    //id 'com.google.devtools.ksp' version '1.8.0-1.0.9' apply false
     id 'de.undercouch.download' version '5.6.0' apply false
 }
 
@@ -101,6 +101,7 @@ propertyDefaultIfUnset("enableModernJavaSyntax", false)
 propertyDefaultIfUnset("enableSpotless", false)
 propertyDefaultIfUnset("enableJUnit", false)
 propertyDefaultIfUnsetWithEnvVar("deploymentDebug", false, "DEPLOYMENT_DEBUG")
+propertyDefaultIfUnset("useNewerKotlinVersion", false)
 
 
 // Project property assertions
@@ -518,7 +519,7 @@ configurations {
     testRuntimeClasspath.extendsFrom(runtimeOnlyNonPublishable)
 }
 
-String mixinProviderSpec = 'zone.rong:mixinbooter:9.1'
+String mixinProviderSpec = 'zone.rong:mixinbooter:10.1'
 dependencies {
     if (usesMixins.toBoolean()) {
         annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
@@ -540,8 +541,8 @@ dependencies {
     }
 
     if (enableJUnit.toBoolean()) {
-        testImplementation 'org.hamcrest:hamcrest:2.2'
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+        testImplementation 'org.hamcrest:hamcrest:3.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
@@ -563,9 +564,13 @@ dependencies {
         testCompileOnly "me.eigenraven.java8unsupported:java-8-unsupported-shim:1.0.0"
     }
 
-    compileOnlyApi 'org.jetbrains:annotations:24.1.0'
-    annotationProcessor 'org.jetbrains:annotations:24.1.0'
-    patchedMinecraft('net.minecraft:launchwrapper:1.17.2') {
+    if (useNewerKotlinVersion.toBoolean()) {
+        implementation 'io.github.chaosunity.forgelin:Forgelin-Continuous:2.0.21.0'
+    }
+
+    compileOnlyApi 'org.jetbrains:annotations:26.0.1'
+    annotationProcessor 'org.jetbrains:annotations:26.0.1'
+    patchedMinecraft('net.minecraft:launchwrapper:1.17.3') {
         transitive = false
     }
 
@@ -575,7 +580,7 @@ dependencies {
 
     if (includeCommonDevEnvMods.toBoolean()) {
         if (!(modId.equals('jei'))) {
-            implementation 'mezz.jei:jei_1.12.2:4.16.1.302'
+            implementation 'mezz.jei:jei_1.12.2:4.16.1.1013'
         }
         if (!(modId.equals('theoneprobe'))) {
             //noinspection DependencyNotationArgument
