--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,18 @@ pluginManagement {
         } else {
             id 'com.diffplug.spotless' version '6.13.0'
         }
+
+        if (useNewerKotlinVersion.toBoolean()) {
+            // Kotlin Library is bundled into Forgelin-Continuous
+            //id 'org.jetbrains.kotlin.jvm' version '2.0.21' apply false
+            id 'org.jetbrains.kotlin.kapt' version '2.0.21' apply false
+            id 'com.google.devtools.ksp' version '2.0.21-1.0.27' apply false
+
+        } else {
+            id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+            id 'org.jetbrains.kotlin.kapt' version '1.8.0' apply false
+            id 'com.google.devtools.ksp' version '1.8.0-1.0.9' apply false
+        }
     }
     repositories {
         maven {
