--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 pluginManagement {
     plugins {
-        if (enableModernJavaSyntax.toBoolean()) {
-            id 'com.diffplug.spotless' version '6.23.3'
+        if (enableModernJavaSyntax.toBoolean() || enableJava17RunTasks.toBoolean()) {
+            id 'com.diffplug.spotless' version '6.23.3' apply false
         } else {
-            id 'com.diffplug.spotless' version '6.13.0'
+            id 'com.diffplug.spotless' version '6.13.0' apply false
         }
 
         if (useNewerKotlinVersion.toBoolean()) {
