add missing comment for file, adjust comments

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# The "gradle.properties" file is used as a config file to control the default values of project properties.
+# The "gradle.properties" file contains settings loaded by all gradle files.
 # For the "build.gradle" file, all properties are stored in the separate and dedicated file "buildscript.properties".
 # Properties can be created via any sequence of ASCII characters followed by an equal sign to set the value.
 #
