--- a/buildscript.properties
+++ b/buildscript.properties
@@ -1,8 +1,17 @@
+#
+# The "buildscript.properties" file contains settings loaded and used by the "build.gradle" file.
+# For settings loaded in all gradle files or custom settings, use "gradle.properties" instead.
+# New properties should not be created in this file, use "gradle.properties" instead.
+#
+
+# The name of your mod. Can be any sequence of characters.
 modName = MyMod
 
-# This is a case-sensitive string to identify your mod. Convention is to use lower case.
+# This is a case-sensitive string to identify your mod.
+# Must be less than 64 characters and all lowercase. Convention is to only contain alphabetic characters.
 modId = mymodid
 
+# Project package location.
 modGroup = com.myname.mymodid
 
 # Version of your mod.
